guava -> List
Signed-off-by: Andrew Duffy <andrew@a10y.dev>